1.20-6.0.4:
- Fixed the crafter GUI

1.20-6.0.3:
- Fixed patchouli integration

1.20-6.0.2:
- Fixed a visual problem with the syringe which would appear full on first crafting

1.20-6.0.1:
- Fixed a bug with rendering (environmental controller)

1.20-6.0.0:
- Port to 1.20

1.19-5.1.7:
- Fixed a problem in the inventory checker. The clear button wouldn't work properly

1.19-5.1.6:
- Update for latest McJtyLib fixing the registryAccess() problem

1.19-5.1.5:
- Fixed a wrong teleportation warning with the matter receiver on 1.19.3 and higher
- Update to 1.19.4

1.19-5.1.4:
- Fixed a potential crash in the teleportation system in some rare cases

1.19-5.1.3:
- 1.19.3 compatibility fix in McJtyLib

1.19-5.1.2:
- Deleting a player from the matter receiver and transmitter player list will now also work based on selection
- Sciguyryan implemented a persistant tag on entities that are spawned by the RFTools spawner (boolean tag rftoolsutility:spawner)
- New feature for sensors. They can now also trigger on amount of items (as entities)
- The gui for the advanced porter now shows the most useful part of the receiver name by setting the cursor at the beginning

1.19-5.1.1:
- The charged ported gui works again in 1.19.3

1.19-5.1.0:
- Updated to Latest McJtyLib and made compatible with 1.19.3

1.19-5.0.4:
- Removed the now obsolete elevator module

1.19-5.0.3:
- Greatly improved the input of the environmental controller. It was very hard to type negative numbers

1.19-5.0.2:
- Fixed the tank updating when the contents changed

1.19-5.0.1:
- The dialing device is infusable again
- Fixed the counter module to work again (fix partially done by joelra)

1.19-5.0.0:
- Port to 1.19

1.18-4.0.16:
- Fixed the blindness module recipe
- Added protection for division by zero in the spawner of the gui
- Small improvement on inputting min height for the environmental controller

1.18-4.0.15:
- Fixed missing recipe for the destination analyzer

1.18-4.0.14: