@@ -1,3 +1,6 @@
+Upcoming:
+- Fixed rendering of the screen when used through a tablet. Also fixed interaction with potential buttons on that screen
+
 1.20-6.0.4:
 - Fixed the crafter GUI
 
